Fix: Update header navigation spacing

--- a/public/css/components/language-switcher.css
+++ b/public/css/components/language-switcher.css
@@ -1,9 +1,29 @@
 .language-switcher {
     position: relative;
-    display: inline-block;
-    background-color: var(--clr-mono-92);
-    padding: 5px 10px;
-    border-radius: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    background-color: var(--clr-mono-90);
+    border-radius: 1rem;
+    padding: 0.7rem;
+    overflow: hidden;
+
+    opacity: 0.5;
+    transition:
+        opacity 0.15s ease,
+        transform 0.15s ease,
+        padding 0.25s ease,
+        background-color 0.25s ease;
+}
+
+.language-switcher:hover,
+.language-switcher.open {
+    opacity: 1;
+}
+
+.language-switcher:has(.language-toggle:active) {
+    transform: scale(0.96);
 }
 
 .language-toggle {
@@ -13,6 +33,7 @@
     cursor: pointer;
     color: inherit;
     padding: 0.25rem;
+    margin: 0;
 
     display: flex;
     align-items: center;
@@ -20,33 +41,30 @@
 }
 
 .language-menu {
-    position: absolute;
-    top: calc(100% + 0.5rem);
-    right: -50%;
-
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
 
-    background: white;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 0.75rem;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
-    z-index: 1000;
-
-    overflow: hidden;
+    width: 100%;
     max-height: 0;
     opacity: 0;
-    padding: 0;
-
+    overflow: hidden;
     pointer-events: none;
+
+    padding-top: 0;
     transition:
         max-height 0.35s ease,
         opacity 0.2s ease,
-        padding 0.35s ease;
+        padding-top 0.25s ease;
 }
 
 .language-menu a {
-    padding: 0.2rem 0.4rem;
+    display: block;
+    width: 100%;
+    text-align: right;
+    padding: 0.3rem 0;
+    font-size: var(--fs-small);
+    font-weight: var(--fw-light);
     text-decoration: none;
     color: inherit;
     white-space: nowrap;
@@ -55,7 +73,8 @@
     transform: translateY(-6px);
     transition:
         opacity 0.2s ease,
-        transform 0.35s ease;
+        transform 0.35s ease,
+        color 0.15s ease;
 }
 
 .language-menu a:hover {
@@ -63,9 +82,9 @@
 }
 
 .language-switcher.open .language-menu {
-    max-height: 16rem; /* just needs to be bigger than menu content */
+    max-height: 10rem;
     opacity: 1;
-    padding: 0.5rem 0;
+    padding-top: 0.5rem;
     pointer-events: auto;
 }
 
@@ -75,8 +94,7 @@
 }
 
 .language-switcher img {
+    opacity: 0.8;
     display: block;
-    opacity: 0.3;
-    width: 1rem;
-    height: 1rem;
+    width: 0.9rem;
 }
