--- a/public/css/layout/header.css
+++ b/public/css/layout/header.css
@@ -35,8 +35,8 @@ header nav > *:not(:first-child) {
     margin: 0 0 0 clamp(20px, 2vw, 60px);
 }
 
-header nav > a:last-child {
-    color: var(--clr-accent);
+header nav > *:last-child {
+    margin-left: 50px;
 }
 
 header nav > a {
